--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <!-- Google Fonts -->
    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
    
-    <!--link href="static/vendor/aos/aos.css" rel="stylesheet">-->
+    link href="static/vendor/aos/aos.css" rel="stylesheet">
     <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
           <a href="https://twitter.com/Rushike60359836" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100056960855286" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/rushi_2701/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://github.com/Rushikeshp2701" class="google-plus"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/rushikesh-rp2701/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -46,7 +46,7 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
